# reddit-terminal-viewer

./: .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.rst  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
aur/: .SRCINFO  PKGBUILD
rtv/: __init__.py  __main__.py  clipboard.py  compat.py  config.py  content.py  docs.py  exceptions.py  inbox_page.py  oauth.py  objects.py  page.py  submission_page.py  subreddit_page.py  subscription_page.py  terminal.py  theme.py
scripts/: build_authors.py  demo_theme.py  update_packages.py
tests/: conftest.py  test_clipboard.py  test_config.py  test_content.py  test_inbox.py  test_mime_parsers.py  test_oauth.py  test_objects.py  test_page.py  test_submission.py  test_subreddit.py  test_subscription.py  test_terminal.py  test_theme.py
