[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rtv"
description = "A simple terminal viewer for Reddit (Reddit Terminal Viewer)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Michael Lazar", email = "lazar.michael22@gmail.com" },
]
keywords = ["reddit", "terminal", "praw", "curses"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4",
    "decorator",
    "requests>=2.28",
    "standard-mailcap; python_version >= '3.13'",
    "wcwidth",
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[project.urls]
Homepage = "https://github.com/michael-lazar/rtv"

[project.scripts]
rtv = "rtv.__main__:main"

[project.optional-dependencies]
test = [
    "coverage",
    "coveralls",
    "pylint",
    "pytest>=7.0",
    "vcrpy>=5.0",
]

[tool.setuptools]
packages = ["rtv", "rtv.packages", "rtv.packages.praw"]

[tool.setuptools.dynamic]
version = { attr = "rtv.__version__.__version__" }

[tool.setuptools.package-data]
rtv = ["templates/*", "themes/*"]
"rtv.packages.praw" = ["praw.ini"]
